@@ -1,3 +1,8 @@
+Tue Oct 21 19:23:20 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * DAnCE/DomainApplication/Domain_Application_Impl.h:
+          Added missing post.h
+
 Tue Oct 21 18:51:20 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ccm/CCM.mpc:
